# sea-fin-multilingual-sentiment

./: .gitignore  README.md  pyproject.toml  requirements.txt  task.ipynb
data/: eval_instructions.jsonl  synthetic_financial_sentiment_english.csv  train_instructions.jsonl
scripts/: data_prep.py  evaluate_model.py  format_data_for_sft.py  synthetic_data_generation.py  train_sentiment_model.py
